--- a/src/scss/_section-intro.scss
+++ b/src/scss/_section-intro.scss
@@ -1,13 +1,18 @@
 @use "variables" as v;
 @use "mixins" as mx;
 
-.full-page__section--intro {
+.section__content--intro {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: v.$color-secondary;
   padding-top: 0; // dirty hack
+}
+
+.section__title--intro {
+  background-color: v.$color-secondary;
+  color: v.$color-tertiary;
 }
 
 .logo {
