--- a/src/scss/_section.scss
+++ b/src/scss/_section.scss
@@ -4,21 +4,53 @@
 .full-page {
   min-height: 100%;
   height: 100%;
-  scroll-snap-type: y proximity;
+  // scroll-snap-type: y proximity;
   overflow-y: scroll;
   scroll-behavior: smooth;
   background-color: v.$color-tertiary;
   z-index: -1;
+}
 
-  &__section {
-    height: 100%;
-    scroll-snap-align: start;
-    scroll-snap-stop: always;
-    border-bottom: solid red 2px;
+.section {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  height: 100%;
+  scroll-snap-align: start;
+  scroll-snap-stop: always;
+  // border-bottom: solid red 1px;
+
+  &__title {
+    position: relative;
+    display: none;
+    width: 10%;
+    flex: 0 1 auto;
+    font-family: v.$font-rz-bold;
+    font-size: 8vw;
+    color: v.$color-secondary;
+    // border: solid 2px red;
+
+    @include mx.screen-m {
+      display: initial;
+    }
+
+    div {
+      position: absolute;
+      left: 100%;
+      bottom: 16px;
+      opacity: 0.1;
+      transform-origin: 0 85%;
+      transform: rotate(-90deg);
+    }
+  }
+
+  &__content {
+    flex: 1 1 auto;
+    border: solid 2px red;
     padding-top: v.$nav-max-height;
 
     @include mx.screen-m {
-      padding-left: v.$nav-offset;
       padding-top: 0;
     }
   }
