border color change

--- a/src/scss/_cursor.scss
+++ b/src/scss/_cursor.scss
@@ -58,7 +58,7 @@
       height: 2px;
       left: 0;
       top: 0;
-      border: solid 1px black;
+      border: solid 1px v.$color-primary;
     }
   }
 }
