removed unnecessary margins

--- a/src/scss/_section-intro.scss
+++ b/src/scss/_section-intro.scss
@@ -7,7 +7,7 @@
   justify-content: center;
   align-items: center;
   background-color: v.$color-secondary;
-  padding-top: 0; // dirty hack
+  padding-left: 0;
 }
 
 .section__title--intro {
