--- a/src/scss/_section-about.scss
+++ b/src/scss/_section-about.scss
@@ -3,7 +3,6 @@
 
 .section__content--about {
   position: relative;
-  // padding-left: 36px;
   overflow: hidden;
 }
 
@@ -19,7 +18,6 @@
 
     @include mx.screen-m {
       font-size: v.$font-size-xxl;
-      margin-left: 96px;
     }
   }
 }
@@ -32,10 +30,7 @@
   max-width: 612px;
   font-weight: 400;
   margin-top: 24px;
-
-  @include mx.screen-m {
-    margin-left: 96px;
-  }
+  text-indent: 64px;
 }
 
 .low-poly-pic {
