--- a/src/scss/_section-projects.scss
+++ b/src/scss/_section-projects.scss
@@ -5,7 +5,6 @@
   &--text-projects {
     max-width: 796px;
     font-size: v.$font-size-l;
-    margin-left: 32px;
     margin-top: 16px;
 
     @include mx.screen-s {
@@ -14,7 +13,6 @@
 
     @include mx.screen-m {
       font-size: v.$font-size-xxl;
-      margin-left: 126px;
     }
   }
 }
@@ -46,7 +44,6 @@
   overflow: hidden;
 
   @include mx.screen-m {
-    margin-left: 126px;
     margin-top: 32px;
     align-items: center;
   }
@@ -55,11 +52,9 @@
     position: absolute;
     right: 8px;
     bottom: 16px;
-    // width: 50%;
     width: 55%;
     height: 55%;
     min-height: 256px;
-    // border: solid 1px red;
     overflow: hidden;
     z-index: 10;
 
@@ -79,8 +74,8 @@
   &__list-item-pos {
     position: absolute;
     height: 2px;
-    top: 25%;
-    width: 40%;
+    top: 20%;
+    width: 25%;
     left: 0;
     background-color: v.$color-primary;
     z-index: 10;
@@ -116,7 +111,6 @@
     font-family: v.$font-rz-bold;
     font-size: v.$font-size-m;
     padding: 8px 8px;
-    // border: solid 1px red;
     text-align: right;
     z-index: 2;
 
@@ -137,7 +131,6 @@
   }
 
   &__desc {
-    // display: none;
     position: relative;
     width: 50%;
     max-width: 396px;
@@ -145,9 +138,9 @@
     background-color: v.$color-primary;
     padding: 42px 16px 32px 16px;
     color: v.$color-tertiary;
-    margin-left: 56px;
+    margin-left: 20px;
     margin-right: 4px;
-    // border: solid 1px red;
+    z-index: 1;
 
     &::before {
       content: "";
@@ -158,6 +151,7 @@
       top: 3px;
       left: 3px;
       border: solid 4px v.$color-primary;
+      z-index: -1;
     }
 
     @include mx.screen-m {
