--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,10 +1,14 @@
 @use "variables" as v;
+@use "mixins" as mx;
 @use "text-appear";
 @use "nav";
 @use "section";
 @use "section-intro";
 @use "section-about";
 @use "section-skills";
+@use "section-projects";
+@use "cursor";
+@use "section-connect";
 
 * {
   margin: 0;
@@ -16,7 +20,23 @@ body {
   width: 100%;
   height: 100%;
   font-family: v.$font-rz-regular;
-  font-size: 16px;
+  font-size: 14px;
+
+  @include mx.screen-s {
+    font-size: 16px;
+  }
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+  cursor: pointer;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 ::-webkit-scrollbar {
@@ -31,4 +51,8 @@ body {
 
 .hide {
   display: none;
+}
+
+.invisible {
+  visibility: hidden;
 }
