--- a/src/scss/_section.scss
+++ b/src/scss/_section.scss
@@ -34,6 +34,10 @@
       display: initial;
     }
 
+    @include mx.screen-land {
+      font-size: 7vw;
+    }
+
     div {
       position: absolute;
       left: 100%;
@@ -52,6 +56,10 @@
     @include mx.screen-m {
       padding-left: 104px;
       padding-top: 0;
+    }
+
+    @include mx.screen-land {
+      padding-left: 96px;
     }
   }
 }
