--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,8 +3,9 @@ $color-secondary: #0f1923;
 $color-tertiary: #e5e5e5;
 
 $nav-offset: 10%;
-$nav-max-height: 72px;
+$nav-max-height: 56px;
 
+$width-xs: 375px;
 $width-s: 576px;
 $width-m: 768px;
 $width-l: 1024px;
@@ -12,6 +13,7 @@ $width-l: 1024px;
 $font-rz-regular: "rz-regular";
 $font-rz-bold: "rz-bold";
 
+$font-size-xs: 0.8rem;
 $font-size-s: 1.1rem;
 $font-size-m: 1.5rem;
 $font-size-l: 2.2rem;
