--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -22,7 +22,7 @@ body {
   font-family: v.$font-rz-regular;
   font-size: 14px;
 
-  @include mx.screen-s {
+  @include mx.screen-xs {
     font-size: 16px;
   }
 
