refactor for small width screen in landscape mode

--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -29,3 +29,9 @@
     @content;
   }
 }
+
+@mixin screen-land-m {
+  @media only screen and (orientation: landscape) and (max-height: 512px) and (min-width: v.$width-m) {
+    @content;
+  }
+}
