--- a/src/scss/_section.scss
+++ b/src/scss/_section.scss
@@ -4,7 +4,7 @@
 .full-page {
   min-height: 100%;
   height: 100%;
-  // scroll-snap-type: y proximity;
+  scroll-snap-type: y proximity;
   overflow-y: scroll;
   scroll-behavior: smooth;
   background-color: v.$color-tertiary;
@@ -59,6 +59,11 @@
     }
 
     @include mx.screen-land {
+      padding-left: 64px;
+      padding-top: 48px;
+    }
+
+    @include mx.screen-land-m {
       padding-left: 96px;
       padding-top: 24px;
     }
