--- a/src/scss/_section-skills.scss
+++ b/src/scss/_section-skills.scss
@@ -28,6 +28,38 @@
   }
 }
 
+.bg-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  img {
+    position: absolute;
+    width: 20%;
+    max-width: 256px;
+    min-width: 196px;
+    padding: 32px;
+    opacity: 0.5;
+  }
+
+  img:nth-child(1) {
+    right: 0;
+    top: 32px;
+  }
+
+  img:nth-child(2) {
+    right: 25%;
+    top: 25%;
+  }
+
+  img:nth-child(3) {
+    right: 5%;
+    bottom: 32px;
+  }
+}
+
 .text-appear {
   &--text-skills {
     font-size: v.$font-size-l;
