added fallback fonts

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -10,8 +10,8 @@ $width-s: 576px;
 $width-m: 768px;
 $width-l: 1024px;
 
-$font-rz-regular: "rz-regular";
-$font-rz-bold: "rz-bold";
+$font-rz-regular: "rz-regular", "Helvetica", "Arial", sans-serif;
+$font-rz-bold: "rz-bold", "Impact", "Arial Black", sans-serif;
 
 $font-size-xs: 0.8rem;
 $font-size-s: 1.1rem;
